--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "google-protobuf": "^3.7.1",
     "iltorb": "^2.4.2",
     "multihashes": "^0.4.14",
-    "web3": "^1.0.0-beta.52"
+    "web3": "^1.2.6"
   },
   "devDependencies": {
     "ts-node": "^8.5.4",
