--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "start": "ts-node src/main.ts"
   },
   "dependencies": {
+    "@types/leveldown": "^4.0.2",
+    "@types/levelup": "^4.3.0",
+    "@types/subleveldown": "^4.1.0",
     "axios": "^0.18.0",
     "base-58": "^0.0.1",
     "google-protobuf": "^3.7.1",
     "iltorb": "^2.4.2",
+    "leveldown": "^5.4.1",
+    "levelup": "^4.3.2",
     "multihashes": "^0.4.14",
+    "subleveldown": "^4.1.4",
     "web3": "^1.2.6"
   },
   "devDependencies": {
